--- a/index.html
+++ b/index.html
@@ -261,24 +261,46 @@
             <img src="assets/pexels-freestocksorg-987586.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Netflix landing page</h5>
-              <p class="card-text">Built with HTML and CSS</p>
+              <p class="card-text">HTML and CSS</p>
               <a href="https://movie-streaming-clone-zaio.netlify.app/" target="_blank" class="btn btn-primary">View
                 Webisite</a>
               <a href="https://github.com/Phumudzo3/zaio-neflix-landing-page-clone" class="btn btn-outline-dark"><i
                   class="bi bi-code"></i></a>
             </div>
           </div>
-
-
-
         </div>
-       
+        <div class="col-md-4 mt-3">
+          <div class="card">
+            <img src="assets/daycare.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Kiddies Planet Daycare</h5>
+              <p class="card-text">Reactjs</p>
+              <a href="https://kiddiesplanetdaycare.netlify.app/" target="_blank" class="btn btn-primary">View
+                Website</a>
+              <a href="" target="_blank"
+                class="btn btn-outline-dark"><i class="bi bi-code"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mt-3">
+          <div class="card">
+            <img src="assets/soundday.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">balep-holdings-Entertainment</h5>
+              <p class="card-text">Reactjs</p>
+              <a href="https://balephoildingsentertainment.netlify.app/" target="_blank" class="btn btn-primary">View
+                Website</a>
+              <a href="" target="_blank"
+                class="btn btn-outline-dark"><i class="bi bi-code"></i></a>
+            </div>
+          </div>
+        </div>
         <div class="col-md-4 mt-3">
           <div class="card">
             <img src="assets/pexels-greenwish-13240227.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Twitter landing page</h5>
-              <p class="card-text">Built with HTML and CSS</p>
+              <p class="card-text"> HTML and CSS</p>
               <a href="https://social-messanger-clone-web-dev.netlify.app/" target="_blank" class="btn btn-primary">View
                 Website</a>
               <a href="https://github.com/Phumudzo3/twitter_landing_page_clone" target="_blank"
@@ -291,7 +313,7 @@
             <img src="assets/pexels-pixabay-258083.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Tesla landing page</h5>
-              <p class="card-text">Built with HTML and CSS</p>
+              <p class="card-text">HTML and CSS</p>
               <a href="https://tesla-web-clone-zaio.netlify.app/" target="_blank" class="btn btn-primary">View
                 Website</a>
               <a href="https://github.com/Phumudzo3/twitter_landing_page_clone" target="_blank"
@@ -306,7 +328,7 @@
               class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Google keep clone</h5>
-              <p class="card-text">Built with HTMl,CSS and Javascript</p>
+              <p class="card-text">HTMl,CSS and Javascript</p>
               <a href="https://notes-app-zaio-without-login.netlify.app/" target="_blank" class="btn btn-primary">View
                 Website</a>
               <a href="https://github.com/Phumudzo3/google-keep-clone" target="_blank" class="btn btn-outline-dark"><i
@@ -320,7 +342,7 @@
             <img src="assets/youtube.jpg" class="card-img-top" height="235px" alt="...">
             <div class="card-body">
               <h5 class="card-title">Youtube  clone</h5>
-              <p class="card-text">Built with HTML and CSS</p>
+              <p class="card-text"> HTML and CSS</p>
               <a href="https://streaming-online-app-zaio.netlify.app/" target="_blank"
                 class="btn btn-primary">View Website</a>
               <a href="https://github.com/Phumudzo3/apple-airpod-website-clone" target="_blank"
@@ -335,7 +357,7 @@
               class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Google keep clone using Reactjs</h5>
-              <p class="card-text">Built using Reactjs</p>
+              <p class="card-text">Reactjs</p>
               <a href="https://notes-app-clone-zaio.netlify.app/" target="_blank"
                 class="btn btn-primary">View Website</a>
               <a href="https://github.com/Phumudzo3/google-keep-using-reactjs" target="_blank"
@@ -346,10 +368,10 @@
         </div>
         <div class="col-md-4 mt-3">
           <div class="card">
-            <img src="assets/insta.jpg" class="card-img-top" alt="...">
+            <img src="assets/insta.jpg" class="card-img-top"  height="235px" alt="...">
             <div class="card-body">
               <h5 class="card-title">Instagram Clone</h5>
-              <p class="card-text">Built using html,css,firebase and Javascript</p>
+              <p class="card-text">html,css,firebase and Javascript</p>
               <a href="https://gleeful-marzipan-217145.netlify.app/" target="_blank" class="btn btn-primary">View
                 Website</a>
               <a href="https://github.com/Phumudzo3/instagram-clone" target="_blank" class="btn btn-outline-dark"><i
@@ -358,14 +380,15 @@
             </div>
           </div>
         </div>
+      
         <div class="col-md-4 mt-3">
           <div class="card">
-            <img src="assets/spotify.jpg" height="235px" class="card-img-top" alt="...">
+            <img src="assets/commercial.jpg" class="card-img-top" height="235px" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Spotify Clone</h5>
-              <p class="card-text">Built using html,css and Javascript</p>
-              <a href="https://spotifyclonepage.netlify.app/" target="_blank" class="btn btn-primary">View Website</a>
-              <a href="https://github.com/Phumudzo3/spotify-clone" target="_blank" class="btn btn-outline-dark"><i
+              <h5 class="card-title">E-commercial App</h5>
+              <p class="card-text">Reactjs</p>
+              <a href="https://ecommerce-shopping-dcec2.web.app/home" target="_blank" class="btn btn-primary">View Website</a>
+              <a href="https://github.com/Phumudzo3/unauwa-e-commercial-app-reactjs" target="_blank" class="btn btn-outline-dark"><i
                   class="bi bi-code"></i></a>
 
             </div>
@@ -373,12 +396,12 @@
         </div>
         <div class="col-md-4 mt-3">
           <div class="card">
-            <img src="assets/youtube.jpg" class="card-img-top" alt="...">
+            <img src="assets/tic-tac.jpg" class="card-img-top" height="235px" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Youtube Clone</h5>
-              <p class="card-text">Built using html,css and Javascript</p>
-              <a href="https://youtubelandingpageclone.netlify.app/" target="_blank" class="btn btn-primary">View Website</a>
-              <a href="https://github.com/Phumudzo3/youtube-clone" target="_blank" class="btn btn-outline-dark"><i
+              <h5 class="card-title">tic-tac-toe-react</h5>
+              <p class="card-text">Reactjs</p>
+              <a href="https://tic-tac-toe-zaio.netlify.app/" target="_blank" class="btn btn-primary">View Website</a>
+              <a href="https://github.com/Phumudzo3/tic-tac-toe-react-course" target="_blank" class="btn btn-outline-dark"><i
                   class="bi bi-code"></i></a>
 
             </div>
